# spyotify

./: .gitignore  README.md  mypy.ini  pyproject.toml
spyotify/: __init__.py  _api.py  _models.py  _types.py
