[tool.poetry]
name = "spyotify"
version = "0.0.0"
description = ""
authors = ["sh1ma <in9lude@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apywrapper = "^0.1.7"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
mypy = "^0.782"
pytest = "^6.0.1"
black = "^20.8b1"
isort = "^5.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
